--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     padding: 0 20px;
     gap: 20px;
     display: grid;
-    grid-template-columns: auto ;
+    grid-template-columns: auto;
 }
 
 .project-card{
@@ -76,10 +76,10 @@
     color: #FFFFFF;
 }
 
+/* on mobile */
 
 /* @media only screen and (max-width: 768px) {
     .card-container{
-
         grid-template-columns: auto ;
     }
 } */
